# alpha-engine-projects

./: .gitignore  2026-06-05_BriefingSoFar.docx  Adding Menu for iPhone touch screen and fullscreen.docx  AlphaEngine_Architecture_Pipelines.docx  Browser_Support.docx  CLAUDE.md  GitHub setup.docx  HANDOFF.md  WebBrowser_Platform.docx  [Info] - Launch on specific browser.docx  [Info][Opimization] Culling tiles lvl 2 - web browser.docx  [Info][Optimization] glError slow down.docx  step1_SDL2Porting.docx  step2_EMCC_CMAKE_Addition.docx  step3_SourceAdaptation.docx  step4_WebPort_Debugging.docx
PongGame/: PONG.md
PongGame/PongGame/: PongGame.sln  PongGame.vcxproj
PongGame/PongGame/Include/: GameStateList.h  GameStateMgr.h  GameState_Menu.h  GameState_Pong.h  GameState_Win.h  Main.h
PongGame/PongGame/Src/: GameStateMgr.cpp  GameState_Menu.cpp  GameState_Pong.cpp  GameState_Win.cpp  Main.cpp
PongGame/PongGame/web/: .gitignore  CMakeLists.txt  build.bat  build.sh  redeploy.bat  shell.html
Project3_Platformer/Assignment_3_Part_2-Solved/: csd1130_Platformer.sln
Project3_Platformer/Assignment_3_Part_2-Solved/csd1130_Platformer/: csd1130_Platformer.vcxproj
Project3_Platformer/Assignment_3_Part_2-Solved/csd1130_Platformer/Include/: GameStateList.h  GameState_Platform_Extension.h  Main.h
Project3_Platformer/Assignment_3_Part_2-Solved/csd1130_Platformer/Src/: AABB_Collision.cpp  GameStateMgr.cpp  GameState_MainMenu.cpp  GameState_Platform.cpp  GameState_Platform_Extension.cpp  Main.cpp
Project3_Platformer/Assignment_3_Part_2-Solved/csd1130_Platformer/web/: CMakeLists.txt  WEB_BUILD_SETUP.md  build.bat  build.sh  redeploy.bat  shell.html
alpha_engine/: .gitignore  CMakeLists.txt  README.md  distribute.bat
alpha_engine/doc/: AEDoxyfile  AEDoxygen.bat  AEDoxygen_mainpage.txt  header.html  header.html.bak
alpha_engine/include/: AEEngine.h  AEExport.h  AEParticle.h  AEWinShim.h
alpha_engine/legacy/tutorials/AlphaEngine v3.08/: AE_V3.08_Tutorial_01_Steps.docx
alpha_engine/legacy/tutorials/AlphaEngine v3.09/: Alpha Engine Tutorial.docx
alpha_engine/legacy/tutorials/AlphaEngine v3.09/AlphaEngine_V3.09/include/: AEGraphics.h
alpha_engine/legacy/tutorials/AlphaEngine v3.09/AlphaEngine_V3.09/lib/: Alpha_Engine.lib  Alpha_EngineD.lib
alpha_engine/src/: 3DPipelineTools.cpp  AEAudio.cpp  AEFrameRateController.cpp  AEGraphics.cpp  AEInput.cpp  AELineSegment2.cpp  AEMath.cpp  AEMtx33.cpp  AEParticle.cpp  AESystem.cpp  AEUtil.cpp  AEVec2.cpp  Matrix4.cpp  Point4.cpp  Vector4.cpp
alpha_engine/tutorials/: build.bat  mkdocs.yml
alpha_engine/tutorials/docs/: camera_system.md  coordinate_systems.md  index.md  input.md  playing_audio.md  primitive_types.md  project_setup.md  rendering_sprites.md  rendering_text.md  spritesheets.md
cmake/: AEWebGame.cmake  EmscriptenCommon.cmake  README_WEB_BUILD.md
docs/: ARCHITECTURE.md  VR_3D_REWORK_PLAN.md
docs/superpowers/plans/: 2026-06-25-pong-gameplay-mods.md  2026-06-25-pong-web-port.md
docs/superpowers/specs/: 2026-06-25-pong-gameplay-mods-design.md  2026-06-25-pong-web-port-design.md
